2009-06-19  Christopher Bratusek <zanghar@freenet.de>
	* themes/microGUI/theme.jl: fixed a speed-issue

2009-06-01  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widget.jl: UTF-8 Support

2009-05-31  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/goups.jl
	* lisp/sawfish/wm/ext/beos-window-menu.jl: UTF-8 Support [Wang Diancheng]

	* configure.in: bump minimum librep to 0.90.0 for UTF-8 Support
		        small fixup in rep-gtk check

2009-05-27  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt.jl: fixed typo

2009-05-25  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/move-cursor.jl: export all functions

2009-05-16  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt.jl: improved prompt.jl [Sergey I. Sharybi]

	* OPTIONS: updated

2009-05-08  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/placement.jl: interactive placement mode now also for dialogs

	* OPTIONS: updated

2009-05-07  Christopher Bratusek <zanghar@freenet.de>
	* COPYING.SOUNDS: added

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/x-cycle.jl: added cycle-among-groups{,-backwards} [Fernando Carmano Varo]

	* lisp/sawfish/wm/autoload.jl: autoload Tabs-group

	* lisp/sawfish/wm/tabs/tab.jl: Tabbed Windowing Support: Raise Tabs on hover

	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/tab.jl: rename add-to-group to tab-add-to-group

2009-05-06  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.spec.in: don't re-define %{_host} [Ritz]

	* */ChangeLog.pre-1.5.0: remove old ChangeLog files

2009-05-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/window-outline.jl: some fixups for the draft animator [Teika]

2009-05-04  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: - fix the last incomplete AC_DEFINE
			- remove unsed configure flags
			- don't add CFLAGS if non given
			- check for intltool 0.40.0

	* autogen.sh: run intltoolize
