@@ -70,6 +70,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 @item Fixup the last incomplete AC_DEFINE [Christopher Bratusek]
 
 @item Fixed a speed-issue with microGUI [Christopher Bratusek]
+
+@item Make properly use of WM_NAME in Elberg-tabbed [Christopher Bratusek]
 @end itemize
 
 @item New features:
