@@ -1,6 +1,8 @@
 2009-06-19  Christopher Bratusek <zanghar@freenet.de>
 	* themes/microGUI/theme.jl: fixed a speed-issue
 
+	* themes/Elberg-tabbed: make properly use of WM_NAME
+
 2009-06-01  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widget.jl: UTF-8 Support
 
